testdata/baselines/reference/submodule/conformance/jsDeclarationsMissingTypeParameters.errors.txt
file.js(12,19): error TS8020: JSDoc types can only be used inside documentation comments.
file.js(12,20): error TS1099: Type argument list cannot be empty.


==== file.js (2 errors) ====
    /**
      * @param {Array=} y desc
      */
    function x(y) { }
    
    // @ts-ignore
    /** @param {function (Array)} func Invoked
     */
    function y(func) { return; }
    
    /**
     * @return {(Array.<> | null)} list of devices
                      ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
                       ~~
!!! error TS1099: Type argument list cannot be empty.
     */
    function z() { return null ;}
    
    /**
     * 
     * @return {?Promise} A promise
     */
    function w() { return null; }